automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <title>HTML Links</title>
 </head>
 <body>
-
+<a href="www.google.com">
+</a>
+<a href="www.google.com" target="_blank"></a>
   <!-- Challenge 1: Wrap the text below with link that has an absolute path -->
   Absolute Path (external link)
 
