--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>HTML Links</title>
 </head>
 <body>
-<a href="www.google.com">google
+<a href="https://www.google.com">google
 </a>
-<a href="www.google.com" target="_blank">google in new tab</a>
+<a href="https://www.google.com" target="_blank">google in new tab</a>
   <!-- Challenge 1: Wrap the text below with link that has an absolute path -->
   Absolute Path (external link)
 
