--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <a href="https://www.google.com">google
 </a>
-<a href="https://www.google.com" target="_blank">google in new tab</a>
+<a href="about.html" target="_blank">google in new tab</a>
   <!-- Challenge 1: Wrap the text below with link that has an absolute path -->
   Absolute Path (external link)
 
