--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   Relative Path (internal link)
 
   <!-- Challenge 3: Wrap the img tag below with link uses the target attribute -->
-  <a href="about.html"><img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion"></a>
+  <a href="about.html" target="_blank"><img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion"></a>
 
 </body>
 </html>
